--- a/render.yaml
+++ b/render.yaml
@@ -5,7 +5,7 @@ services:
     region: oregon
     plan: free
 buildCommand: "pip install -r requirements.txt && python scraper.py && python nutrition_api.py"
-    startCommand: "gunicorn server:app"
+startCommand: "python scheduler.py & gunicorn server:app"
     envVars:
       - key: PYTHON_VERSION
         value: 3.11.0
