Run scheduler directly without start.sh

--- a/render.yaml
+++ b/render.yaml
@@ -5,7 +5,7 @@ services:
     region: oregon
     plan: free
     buildCommand: "pip install -r requirements.txt && python scraper.py && python nutrition_api.py"
-    startCommand: "bash start.sh"
+    startCommand: "python scheduler.py & gunicorn server:app --bind 0.0.0.0:$PORT"
     envVars:
       - key: PYTHON_VERSION
         value: 3.11.0
