--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 Flask==3.0.0
-gunicorn==21.2.0
-flask-cors==4.0.0
-requests==2.31.0
+Flask-CORS==4.0.0
 beautifulsoup4==4.12.2
+requests==2.31.0
 schedule==1.2.0
+gunicorn==21.2.0
+selenium==4.16.0
